Add treatment sub-pages (Sleeve, Bypass, Endoskopik), fix topic cards and tag filters

--- a/pages/rehberler.html
+++ b/pages/rehberler.html
@@ -741,21 +741,21 @@
         <div class="popular-inner">
             <h2 class="section-title">Popüler Konular</h2>
             <div class="tags-cloud">
-                <a href="#" class="tag">Kilo verme</a>
-                <a href="#" class="tag">Beslenme</a>
-                <a href="#" class="tag">Egzersiz</a>
-                <a href="#" class="tag">Diyabet</a>
-                <a href="#" class="tag">Kalp sağlığı</a>
-                <a href="#" class="tag">Uyku</a>
-                <a href="#" class="tag">Stres yönetimi</a>
-                <a href="#" class="tag">Akdeniz diyeti</a>
-                <a href="#" class="tag">Aralıklı oruç</a>
-                <a href="#" class="tag">Protein</a>
-                <a href="#" class="tag">Kolesterol</a>
-                <a href="#" class="tag">Tansiyon</a>
-                <a href="#" class="tag">GLP-1 ilaçları</a>
-                <a href="#" class="tag">Bariatrik cerrahi</a>
-                <a href="#" class="tag">Metabolik sendrom</a>
+                <a href="rehberler/kalori-acigi.html" class="tag">Kilo verme</a>
+                <a href="beslenme.html" class="tag">Beslenme</a>
+                <a href="egzersiz.html" class="tag">Egzersiz</a>
+                <a href="rehberler/tip2-diyabet.html" class="tag">Diyabet</a>
+                <a href="rehberler/kalp-sagligi.html" class="tag">Kalp sağlığı</a>
+                <a href="rehberler/uyku-kalitesi.html" class="tag">Uyku</a>
+                <a href="uyku-stres.html" class="tag">Stres yönetimi</a>
+                <a href="rehberler/akdeniz-diyeti.html" class="tag">Akdeniz diyeti</a>
+                <a href="rehberler/aralikli-oruc.html" class="tag">Aralıklı oruç</a>
+                <a href="beslenme.html" class="tag">Protein</a>
+                <a href="blog/akdeniz-diyeti-kalp-sagligi.html" class="tag">Kolesterol</a>
+                <a href="rehberler/kalp-sagligi.html" class="tag">Tansiyon</a>
+                <a href="blog/glp1-ilaclari-ve-kilo-verme-bilmeniz-gerekenler.html" class="tag">GLP-1 ilaçları</a>
+                <a href="tedavi.html" class="tag">Bariatrik cerrahi</a>
+                <a href="blog/insulin-direnci-belirtiler-tedavi.html" class="tag">Metabolik sendrom</a>
             </div>
         </div>
     </section>
