--- a/pages/tedavi.html
+++ b/pages/tedavi.html
@@ -502,9 +502,9 @@
                 </div>
                 <div class="treatment-body">
                     <ul class="treatment-list">
-                        <li><a href="#">Gastrik Sleeve <span>→</span></a></li>
-                        <li><a href="#">Gastrik Bypass <span>→</span></a></li>
-                        <li><a href="#">Endoskopik Prosedürler <span>→</span></a></li>
+                        <li><a href="tedavi/gastrik-sleeve.html">Gastrik Sleeve <span>→</span></a></li>
+                        <li><a href="tedavi/gastrik-bypass.html">Gastrik Bypass <span>→</span></a></li>
+                        <li><a href="tedavi/endoskopik-prosedurler.html">Endoskopik Prosedürler <span>→</span></a></li>
                         <li><a href="#">Ameliyat Öncesi Hazırlık <span>→</span></a></li>
                         <li><a href="#">Uzun Vadeli Takip <span>→</span></a></li>
                     </ul>
