--- a/pages/uyku-stres.html
+++ b/pages/uyku-stres.html
@@ -490,7 +490,7 @@
             <div class="score-content">
                 <h2>Uyku Kalitenizi Ölçün</h2>
                 <p>Uyku alışkanlıklarınızı analiz edin, kişiselleştirilmiş iyileştirme önerileri alın. Sadece 2 dakikalık test ile uyku puanınızı öğrenin.</p>
-                <a href="#" class="btn-light">Uyku Testini Başlat →</a>
+                <a href="test.html" class="btn-light">Uyku Testini Başlat →</a>
             </div>
         </div>
     </section>
@@ -543,7 +543,7 @@
     <section class="cta-section">
         <h2>Uyku ve stres profilinizi keşfedin</h2>
         <p>Kişiselleştirilmiş öneriler için ücretsiz değerlendirmemizi tamamlayın.</p>
-        <a href="#" class="btn-white">Değerlendirmeye Başla →</a>
+        <a href="test.html" class="btn-white">Değerlendirmeye Başla →</a>
     </section>
 
     <footer class="footer">
