--- a/index.html
+++ b/index.html
@@ -332,20 +332,36 @@
 
         .hero-tagline {
             font-family: 'Playfair Display', serif;
-            font-size: clamp(3rem, 8vw, 5.5rem);
+            font-size: clamp(2.2rem, 6vw, 5rem);
             font-weight: 500;
-            line-height: 1.1;
+            line-height: 1.15;
             margin-bottom: 1.5rem;
             letter-spacing: -0.02em;
-        }
-
-        .hero-tagline {
             display: flex;
             flex-direction: column;
             align-items: center;
-            line-height: 1.15;
             width: 100%;
-            max-width: 900px;
+            max-width: 850px;
+            padding: 0 1rem;
+        }
+
+        @media (max-width: 600px) {
+            .hero-tagline {
+                font-size: 2rem;
+            }
+            .logo-img-hero {
+                height: 120px;
+            }
+            .hero-description {
+                font-size: 1rem;
+                padding: 0 0.5rem;
+            }
+        }
+
+        @media (max-width: 400px) {
+            .hero-tagline {
+                font-size: 1.7rem;
+            }
         }
 
         .rotating-container {
