Add Unsplash images to blog posts and tedavi pages

--- a/pages/tedavi/gastrik-bypass.html
+++ b/pages/tedavi/gastrik-bypass.html
@@ -49,6 +49,8 @@
             <a href="../../index.html">Ana Sayfa</a> → <a href="../tedavi.html">Tedavi</a> → Gastrik Bypass
         </div>
         
+        <div class="hero-image" style="width:100%; height:280px; background:linear-gradient(135deg, rgba(239,68,68,0.7), rgba(220,38,38,0.7)), url('https://images.unsplash.com/photo-1551076805-e1869033e561?w=800&q=80') center/cover; border-radius:16px; margin-bottom:2rem;"></div>
+
         <h1>Gastrik Bypass (Roux-en-Y)</h1>
         <p class="subtitle">Diyabet remisyonunda altın standart bariatrik cerrahi</p>
 
