--- a/pages/tedavi/gastrik-sleeve.html
+++ b/pages/tedavi/gastrik-sleeve.html
@@ -52,6 +52,8 @@
             <a href="../../index.html">Ana Sayfa</a> → <a href="../tedavi.html">Tedavi</a> → Gastrik Sleeve
         </div>
         
+        <div class="hero-image" style="width:100%; height:280px; background:linear-gradient(135deg, rgba(25,81,87,0.7), rgba(42,125,131,0.7)), url('https://images.unsplash.com/photo-1579684385127-1ef15d508118?w=800&q=80') center/cover; border-radius:16px; margin-bottom:2rem;"></div>
+
         <h1>Gastrik Sleeve (Tüp Mide) Ameliyatı</h1>
         <p class="subtitle">Morbid obezite tedavisinde en yaygın uygulanan cerrahi yöntem</p>
 
