--- a/pages/tedavi/endoskopik-prosedurler.html
+++ b/pages/tedavi/endoskopik-prosedurler.html
@@ -54,6 +54,8 @@
             <a href="../../index.html">Ana Sayfa</a> → <a href="../tedavi.html">Tedavi</a> → Endoskopik Prosedürler
         </div>
         
+        <div class="hero-image" style="width:100%; height:280px; background:linear-gradient(135deg, rgba(16,185,129,0.7), rgba(5,150,105,0.7)), url('https://images.unsplash.com/photo-1579684385127-1ef15d508118?w=800&q=80') center/cover; border-radius:16px; margin-bottom:2rem;"></div>
+
         <h1>Endoskopik Obezite Prosedürleri</h1>
         <p class="subtitle">Kesi gerektirmeyen, minimal invaziv kilo verme prosedürleri</p>
 
