--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
         .hero-tagline {
             font-family: 'Playfair Display', serif;
-            font-size: clamp(2.2rem, 6vw, 5rem);
+            font-size: clamp(1.8rem, 5vw, 4rem);
             font-weight: 500;
             line-height: 1.15;
             margin-bottom: 1.5rem;
@@ -341,26 +341,29 @@
             flex-direction: column;
             align-items: center;
             width: 100%;
-            max-width: 850px;
-            padding: 0 1rem;
+            max-width: 100%;
+            padding: 0 1.5rem;
         }
 
-        @media (max-width: 600px) {
+        @media (max-width: 768px) {
             .hero-tagline {
-                font-size: 2rem;
+                font-size: clamp(1.6rem, 4.5vw, 2.5rem);
             }
             .logo-img-hero {
-                height: 120px;
+                height: 100px;
             }
             .hero-description {
-                font-size: 1rem;
-                padding: 0 0.5rem;
+                font-size: 0.95rem;
+                padding: 0 1rem;
             }
         }
 
-        @media (max-width: 400px) {
+        @media (max-width: 480px) {
             .hero-tagline {
-                font-size: 1.7rem;
+                font-size: 1.5rem;
+            }
+            .logo-img-hero {
+                height: 80px;
             }
         }
 
@@ -382,7 +385,8 @@
             transform: translateY(100%);
             opacity: 0;
             transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease;
-            white-space: nowrap;
+            white-space: normal;
+            word-wrap: break-word;
             color: rgba(255,255,255,0.95);
         }
 
