Add Unsplash images to homepage blog cards + update to new articles

--- a/index.html
+++ b/index.html
@@ -2146,36 +2146,36 @@
                 <p style="color: #6b7280;">Sağlık, beslenme ve yaşam tarzı hakkında güncel yazılar</p>
             </div>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
-                <a href="pages/blog/kilo-yonetimi-tedavi-secenekleri-karsilastirmasi.html" style="text-decoration: none; color: inherit;">
+                <a href="pages/blog/glp1-tam-rehber.html" style="text-decoration: none; color: inherit;">
                     <div style="background: #f8fafc; border-radius: 16px; overflow: hidden; border: 1px solid #e5e7eb; transition: all 0.3s;">
-                        <div style="height: 180px; background: linear-gradient(135deg, #E8963E, #D97706); display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
-                            <h3 style="color: white; font-size: 1.1rem; font-weight: 600; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">Kilo Yönetimi: Tedavi Seçenekleri</h3>
+                        <div style="height: 180px; background: linear-gradient(135deg, rgba(236,72,153,0.7), rgba(219,39,119,0.7)), url('https://images.unsplash.com/photo-1631549916768-4119b2e5f926?w=600&q=80') center/cover; display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
+                            <h3 style="color: white; font-size: 1.1rem; font-weight: 600; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">GLP-1 İlaçları Tam Rehberi</h3>
                         </div>
                         <div style="padding: 1.25rem;">
-                            <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">İlaç, endoskopi, cerrahi, diyet - hangisi size uygun?</p>
-                            <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026</span>
+                            <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">Ozempic, Wegovy, Mounjaro - tüm klinik veriler.</p>
+                            <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026 • 18 dk</span>
                         </div>
                     </div>
                 </a>
-                <a href="pages/blog/bilimsel-yaklasimimiz-neden-onemli.html" style="text-decoration: none; color: inherit;">
+                <a href="pages/blog/esg-endoskopik-sleeve-rehber.html" style="text-decoration: none; color: inherit;">
                     <div style="background: #f8fafc; border-radius: 16px; overflow: hidden; border: 1px solid #e5e7eb; transition: all 0.3s;">
-                        <div style="height: 180px; background: linear-gradient(135deg, #195157, #2a7d83); display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
-                            <h3 style="color: white; font-size: 1.1rem; font-weight: 600; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">Bilimsel Yaklaşımımız: Neden Önemli?</h3>
+                        <div style="height: 180px; background: linear-gradient(135deg, rgba(16,185,129,0.7), rgba(5,150,105,0.7)), url('https://images.unsplash.com/photo-1579684385127-1ef15d508118?w=600&q=80') center/cover; display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
+                            <h3 style="color: white; font-size: 1.1rem; font-weight: 600; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">ESG: Ameliyatsız Mide Küçültme</h3>
                         </div>
                         <div style="padding: 1.25rem;">
-                            <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">Kanıta dayalı, bağımsız bilgi sunma ilkelerimiz.</p>
-                            <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026</span>
+                            <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">5 yıllık veriler ve iyileşme süreci.</p>
+                            <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026 • 16 dk</span>
                         </div>
                     </div>
                 </a>
-                <a href="pages/blog/glp1-ilaclari-ve-kilo-verme-bilmeniz-gerekenler.html" style="text-decoration: none; color: inherit;">
+                <a href="pages/blog/ozempic-vs-esg-maliyet.html" style="text-decoration: none; color: inherit;">
                     <div style="background: #f8fafc; border-radius: 16px; overflow: hidden; border: 1px solid #e5e7eb; transition: all 0.3s;">
-                        <div style="height: 180px; background: linear-gradient(135deg, #EC4899, #DB2777); display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
-                            <h3 style="color: white; font-size: 1.1rem; font-weight: 600; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">GLP-1 İlaçları ve Kilo Verme</h3>
+                        <div style="height: 180px; background: linear-gradient(135deg, rgba(245,158,11,0.7), rgba(217,119,6,0.7)), url('https://images.unsplash.com/photo-1554224155-6726b3ff858f?w=600&q=80') center/cover; display: flex; align-items: flex-end; padding: 1.25rem; position: relative;">
+                            <h3 style="color: white; font-size: 1.1rem; font-weight: 600; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">Ozempic vs ESG: 5 Yıllık Maliyet</h3>
                         </div>
                         <div style="padding: 1.25rem;">
-                            <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">Ozempic, Wegovy nasıl çalışır? Bilmeniz gerekenler.</p>
-                            <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026</span>
+                            <p style="color: #6b7280; font-size: 0.9rem; margin-bottom: 0.5rem;">Türkiye fiyatlarıyla gerçekçi hesaplamalar.</p>
+                            <span style="color: #9ca3af; font-size: 0.8rem;">📅 7 Şubat 2026 • 12 dk</span>
                         </div>
                     </div>
                 </a>
