Add tyzd.org link to all Tıpta Yapay Zeka Derneği mentions

--- a/pages/tesekkurler.html
+++ b/pages/tesekkurler.html
@@ -40,7 +40,7 @@
     </main>
 
     <footer>
-        <p>© 2026 UzunYaşa. Tıpta Yapay Zeka Derneği girişimidir.</p>
+        <p>© 2026 UzunYaşa. <a href="https://tyzd.org" target="_blank" style="color:inherit;text-decoration:underline;">Tıpta Yapay Zeka Derneği</a> girişimidir.</p>
     </footer>
 </body>
 </html>
