--- a/index.html
+++ b/index.html
@@ -2326,7 +2326,7 @@
                     <a href="#" title="LinkedIn"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="8" y="8" width="32" height="32" rx="4" stroke="currentColor" stroke-width="2.5"/><path d="M16 22V34" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/><circle cx="16" cy="16" r="2.5" fill="currentColor"/><path d="M24 22V34" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/><path d="M24 28C24 24 26 22 30 22C34 22 34 26 34 28V34" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/></svg></a>
                 </div>
                 <p class="footer-org">
-                    UzunYaşa, <a href="https://tiptayapayzeka.org.tr" target="_blank" rel="noopener">Tıpta Yapay Zeka Derneği</a> girişimidir. Kâr amacı gütmemektedir.
+                    UzunYaşa, <a href="https://tyzd.org" target="_blank" rel="noopener">Tıpta Yapay Zeka Derneği</a> girişimidir. Kâr amacı gütmemektedir.
                 </p>
                 <p class="footer-disclaimer">
                     Bu site tıbbi tavsiye sağlamaz. Kararlarınız için mutlaka bir sağlık uzmanına danışın.
