Add İçerik column to footer (Hikayeler, Rehberler, Blog), update Hakkımızda with icon

--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -446,8 +446,8 @@
                 <p>UzunYaşa, sağlık bilgisinin ticari çıkarlardan bağımsız, bilimsel kanıtlara dayalı ve herkes için anlaşılır olması gerektiğine inanır.</p>
                 <p>Amacımız, insanların kendi sağlıkları hakkında bilinçli kararlar vermelerine yardımcı olmak. Ne satıyoruz, ne de sponsor alıyoruz. Sadece bilim konuşuyoruz.</p>
             </div>
-            <div class="mission-image">
-                <img src="../images/logo-white.svg" alt="UzunYaşa">
+            <div class="mission-image" style="display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, var(--primary-teal), var(--primary-teal-light)); border-radius: 20px; padding: 3rem;">
+                <img src="../images/icon.png" alt="UzunYaşa" style="max-width: 150px; height: auto;">
             </div>
         </div>
     </section>
