--- a/index.html
+++ b/index.html
@@ -2290,6 +2290,15 @@
                     </div>
                 </div>
                 <div class="footer-column">
+                    <h4>İçerik</h4>
+                    <ul class="footer-links">
+                        <li><a href="pages/hikayeler.html">Hikayeler</a></li>
+                        <li><a href="pages/rehberler.html">Rehberler</a></li>
+                        <li><a href="pages/blog.html">Blog</a></li>
+                        <li><a href="pages/bilim.html">Bilim</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
                     <h4>Keşfet</h4>
                     <ul class="footer-links">
                         <li><a href="pages/beslenme.html">Beslenme</a></li>
@@ -2312,7 +2321,7 @@
                     <ul class="footer-links">
                         <li><a href="pages/hakkimizda.html">Misyonumuz</a></li>
                         <li><a href="pages/hakkimizda.html#kurul">Danışma Kurulu</a></li>
-                        <li><a href="pages/hakkimizda.html#editoryal">Editöryal Politika</a></li>
+                        <li><a href="https://tyzd.org" target="_blank">Tıpta Yapay Zeka Derneği</a></li>
                         <li><a href="pages/hakkimizda.html#iletisim">İletişim</a></li>
                     </ul>
                 </div>
