Fix all site issues: © 2026, remove emoji overlays, add ecem-icon, update hikayeler, hide empty social links

--- a/pages/hikayeler.html
+++ b/pages/hikayeler.html
@@ -518,23 +518,23 @@
         <div class="page-hero-overlay"></div>
         <div class="page-hero-content">
             <h1>Başarı Hikayeleri</h1>
-            <p>Gerçek insanların, gerçek dönüşümleri. İlham veren yolculuklar ve öğrenilen dersler.</p>
+            <p>İlham verici hikayeler ve dönüşüm yolculukları. <em style="opacity: 0.8; font-size: 0.9em;">(Gizlilik için isimler değiştirilmiştir)</em></p>
         </div>
     </section>
 
     <section class="stats-banner">
         <div class="stats-grid">
             <div class="stat-item">
-                <h3>1,200+</h3>
-                <p>Paylaşılan hikaye</p>
+                <h3>📖</h3>
+                <p>İlham verici hikayeler</p>
             </div>
             <div class="stat-item">
-                <h3>15,000+</h3>
-                <p>kg toplam verilen kilo</p>
+                <h3>💪</h3>
+                <p>Gerçek dönüşümler</p>
             </div>
             <div class="stat-item">
-                <h3>%87</h3>
-                <p>Hedefine ulaşan kullanıcı</p>
+                <h3>🎯</h3>
+                <p>Ulaşılabilir hedefler</p>
             </div>
         </div>
     </section>
@@ -566,7 +566,7 @@
                         <div class="label">Kan şekeri</div>
                     </div>
                 </div>
-                <a href="#" class="story-link">Hikayenin tamamını oku →</a>
+                
             </div>
         </div>
 
@@ -832,7 +832,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <span>© 2025 UzunYaşa. Tüm hakları saklıdır.</span>
+                <span>© 2026 UzunYaşa. Tüm hakları saklıdır.</span>
                 <span>Gizlilik Politikası | Kullanım Koşulları</span>
             </div>
         </div>
