--- a/index.html
+++ b/index.html
@@ -2328,12 +2328,12 @@
             </div>
             <div class="footer-bottom">
                 <p class="footer-copyright">© 2026 UzunYaşa. Tüm hakları saklıdır.</p>
+                <!-- Sosyal medya hesapları açıldığında aktif edilecek
                 <div class="footer-social">
-                    <a href="#" title="Instagram"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="8" y="8" width="32" height="32" rx="9" stroke="currentColor" stroke-width="2.5"/><circle cx="24" cy="24" r="8" stroke="currentColor" stroke-width="2.5"/><circle cx="34" cy="14" r="2.5" fill="currentColor"/></svg></a>
-                    <a href="#" title="YouTube"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="6" y="10" width="36" height="28" rx="6" stroke="currentColor" stroke-width="2.5"/><path d="M20 18L32 24L20 30V18Z" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/></svg></a>
-                    <a href="#" title="X"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 10L22 26L10 38" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M38 10L26 26L38 38" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/></svg></a>
-                    <a href="#" title="LinkedIn"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="8" y="8" width="32" height="32" rx="4" stroke="currentColor" stroke-width="2.5"/><path d="M16 22V34" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/><circle cx="16" cy="16" r="2.5" fill="currentColor"/><path d="M24 22V34" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/><path d="M24 28C24 24 26 22 30 22C34 22 34 26 34 28V34" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/></svg></a>
+                    <a href="#" title="Instagram">...</a>
+                    <a href="#" title="YouTube">...</a>
                 </div>
+                -->
                 <p class="footer-org">
                     UzunYaşa, <a href="https://tyzd.org" target="_blank" rel="noopener">Tıpta Yapay Zeka Derneği</a> girişimidir. Kâr amacı gütmemektedir.
                 </p>
