🏠 Update homepage with real blog posts
- Replaced placeholder guide links with actual blog posts
- Using social media images as thumbnails
- Added proper categories and reading times
- Links to pages/blog.html for all posts

--- a/index.html
+++ b/index.html
@@ -2186,64 +2186,64 @@
         </div>
     </section>
 
-    <!-- GUIDES SECTION -->
+    <!-- BLOG SECTION -->
     <section class="guides-section">
         <div class="section-inner">
             <div class="section-header">
                 <h2 class="section-title">En Çok Okunan Rehberler</h2>
             </div>
             <div class="guides-grid">
-                <a href="pages/rehberler/kalori-acigi.html" class="guide-card">
-                    <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1587854692152-cbe660dbde88?w=500&q=80');">
-                        <div class="guide-title">GLP-1 İlaçları: Bilmeniz Gereken Her Şey</div>
+                <a href="pages/blog/glp1-tam-rehber.html" class="guide-card">
+                    <div class="guide-card-image" style="background-image: url('images/social/glp1-tam-rehber-slide1.jpg');">
+                        <div class="guide-title">GLP-1 İlaçları Tam Rehberi: Ozempic, Wegovy, Mounjaro</div>
                     </div>
                     <div class="guide-card-body">
-                        <div class="guide-meta">⏱️ 12 dk okuma</div>
+                        <div class="guide-meta">💊 GLP-1 İlaçları • ⏱️ 12 dk okuma</div>
                     </div>
                 </a>
-                <a href="pages/rehberler/aralikli-oruc.html" class="guide-card">
-                    <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1490645935967-10de6ba17061?w=500&q=80');">
-                        <div class="guide-title">Aralıklı Oruç: Gerçekten İşe Yarıyor mu?</div>
+                <a href="pages/blog/blue-zones-dunyanin-en-uzun-yasayan-insanlarinin-9-sirri.html" class="guide-card">
+                    <div class="guide-card-image" style="background-image: url('images/social/blue-zones-dunyanin-en-uzun-yasayan-insanlarinin-9-sirri-slide1.jpg');">
+                        <div class="guide-title">Blue Zones: Dünyanın En Uzun Yaşayan İnsanlarının 9 Sırrı</div>
                     </div>
                     <div class="guide-card-body">
-                        <div class="guide-meta">⏱️ 8 dk okuma</div>
+                        <div class="guide-meta">🌍 Yaşam Tarzı • ⏱️ 10 dk okuma</div>
                     </div>
                 </a>
-                <a href="pages/rehberler/evde-egzersiz.html" class="guide-card">
-                    <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1517836357463-d25dfeac3438?w=500&q=80');">
-                        <div class="guide-title">Kilo Verdiren Egzersizler: Bilim Ne Diyor</div>
+                <a href="pages/blog/esg-endoskopik-sleeve-rehber.html" class="guide-card">
+                    <div class="guide-card-image" style="background-image: url('images/social/esg-endoskopik-sleeve-rehber-slide1.jpg');">
+                        <div class="guide-title">Endoskopik Sleeve Gastroplasti (ESG) Kapsamlı Rehberi</div>
                     </div>
                     <div class="guide-card-body">
-                        <div class="guide-meta">⏱️ 10 dk okuma</div>
+                        <div class="guide-meta">🔬 Endoskopik Tedavi • ⏱️ 16 dk okuma</div>
                     </div>
                 </a>
-                <a href="pages/rehberler/akdeniz-diyeti.html" class="guide-card">
-                    <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1447452001602-7090c7ab2db3?w=500&q=80');">
-                        <div class="guide-title">Uzun Yaşamın Bilimsel Sırları</div>
+                <a href="pages/blog/bariatrik-cerrahi-rehberi.html" class="guide-card">
+                    <div class="guide-card-image" style="background-image: url('images/social/bariatrik-cerrahi-rehberi-slide1.jpg');">
+                        <div class="guide-title">Bariatrik Cerrahi Rehberi: Sleeve, Bypass ve Diğer Yöntemler</div>
                     </div>
                     <div class="guide-card-body">
-                        <div class="guide-meta">⏱️ 15 dk okuma</div>
+                        <div class="guide-meta">🏥 Bariatrik Cerrahi • ⏱️ 14 dk okuma</div>
                     </div>
                 </a>
-                <a href="pages/rehberler/uyku-kalitesi.html" class="guide-card">
-                    <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1512621776951-a57141f2eefd?w=500&q=80');">
-                        <div class="guide-title">Duygusal Yeme: Nasıl Başa Çıkılır?</div>
+                <a href="pages/blog/akdeniz-diyeti-kalp-sagligi.html" class="guide-card">
+                    <div class="guide-card-image" style="background-image: url('images/social/akdeniz-diyeti-kalp-sagligi-slide1.jpg');">
+                        <div class="guide-title">Akdeniz Diyeti ve Kalp Sağlığı</div>
                     </div>
                     <div class="guide-card-body">
-                        <div class="guide-meta">⏱️ 7 dk okuma</div>
+                        <div class="guide-meta">🥗 Beslenme • ⏱️ 8 dk okuma</div>
                     </div>
                 </a>
-                <a href="pages/rehberler/tip2-diyabet.html" class="guide-card">
-                    <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1550572017-edd951aa8f72?w=500&q=80');">
-                        <div class="guide-title">Supplement Rehberi: Hangileri İşe Yarıyor?</div>
+                <a href="pages/blog/uyku-ve-kilo-gizli-baglanti.html" class="guide-card">
+                    <div class="guide-card-image" style="background-image: url('images/social/uyku-ve-kilo-gizli-baglanti-slide1.jpg');">
+                        <div class="guide-title">Uyku ve Kilo: Gizli Bağlantı</div>
                     </div>
                     <div class="guide-card-body">
-                        <div class="guide-meta">⏱️ 12 dk okuma</div>
+                        <div class="guide-meta">😴 Yaşam Tarzı • ⏱️ 7 dk okuma</div>
                     </div>
                 </a>
             </div>
             <div style="text-align: center; margin-top: 2rem;">
-                <a href="pages/rehberler.html" class="btn btn-outline btn-lg">Tüm Rehberleri Gör →</a>
+                <a href="pages/blog.html" class="btn btn-outline btn-lg">Tüm Rehberleri Gör →</a>
             </div>
         </div>
     </section>
