📌 Add Blog link to header navigation

--- a/index.html
+++ b/index.html
@@ -1802,6 +1802,7 @@
                             <a href="pages/uyku-stres.html" class="nav-dropdown-item">🧠 Zihin & Davranış</a>
                         </div>
                     </li>
+                    <li><a href="pages/blog.html" class="nav-link">Blog</a></li>
                     <li><a href="pages/araclar.html" class="nav-link">Araçlar</a></li>
                     <li><a href="pages/hikayeler.html" class="nav-link">Hikayeler</a></li>
                     <li><a href="pages/bilim.html" class="nav-link">Bilim</a></li>
