--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -1,139 +1,24 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-QBM7E0EHFP');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkımızda | UzunYaşa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/main.css">
     <style>
-        :root {
-            --primary-teal: #195157;
-            --primary-teal-light: #2a6b73;
-            --accent-orange: #E8963E;
-            --accent-orange-light: #f0a854;
-            --text-dark: #1a1a1a;
-            --text-gray: #6b7280;
-            --bg-cream: #FAF9F7;
-            --bg-white: #FFFFFF;
-            --border-light: #e5e7eb;
-        }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            color: var(--text-dark);
-            line-height: 1.6;
-            background: var(--bg-cream);
-        }
-
-        .header {
-            position: fixed;
-            top: 0; left: 0; right: 0;
-            z-index: 1000;
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(10px);
-            border-bottom: 1px solid var(--border-light);
-        }
-
-        .header-inner {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0.75rem 2rem;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .logo-img { height: 70px; width: auto; }
-
-        .nav { display: flex; align-items: center; gap: 2rem; }
-
-        .nav-link {
-            color: var(--text-dark);
-            text-decoration: none;
-            font-weight: 500;
-            font-size: 0.95rem;
-            transition: color 0.2s;
-        }
-
-        .nav-link:hover, .nav-link.active { color: var(--primary-teal); }
-
-        .btn-primary {
-            background: var(--accent-orange);
-            color: white;
-            padding: 0.75rem 1.5rem;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 0.95rem;
-            transition: all 0.2s;
-        }
-
-        .btn-primary:hover { background: var(--accent-orange-light); transform: translateY(-1px); }
-
-        /* Hero */
-        .page-hero {
-            position: relative;
-            padding: 10rem 2rem 5rem;
-            background: linear-gradient(135deg, var(--primary-teal) 0%, var(--primary-teal-light) 100%);
-            color: white;
-            overflow: hidden;
-        }
-
-        .page-hero-bg {
-            position: absolute;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            object-fit: cover;
-            opacity: 0.3;
-        }
-
-        .page-hero-overlay {
-            position: absolute;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background: linear-gradient(135deg, rgba(25, 81, 87, 0.9) 0%, rgba(42, 107, 115, 0.85) 100%);
-        }
-
-        .page-hero-content {
-            position: relative;
-            z-index: 2;
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: center;
-        }
-
-        .page-hero h1 { font-size: 3rem; font-weight: 700; margin-bottom: 1rem; }
-        .page-hero p { font-size: 1.25rem; opacity: 0.9; max-width: 600px; margin: 0 auto; }
-
-        /* Content */
-        .content-section {
-            padding: 5rem 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .content-section.alt { background: var(--bg-white); }
         .content-section.full { max-width: 100%; }
 
-        .section-title {
-            font-size: 2rem;
-            font-weight: 700;
-            color: var(--primary-teal);
-            margin-bottom: 1rem;
-        }
-
-        .section-subtitle {
-            font-size: 1.1rem;
-            color: var(--text-gray);
-            margin-bottom: 3rem;
-            max-width: 700px;
-        }
-
-        /* Mission Section */
         .mission-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -170,7 +55,6 @@
             opacity: 0.3;
         }
 
-        /* Values */
         .values-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
@@ -207,7 +91,6 @@
         .value-card h3 { font-size: 1.25rem; font-weight: 600; margin-bottom: 0.75rem; }
         .value-card p { color: var(--text-gray); font-size: 0.95rem; line-height: 1.6; }
 
-        /* Team Section */
         .team-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -236,7 +119,6 @@
         .team-card .role { color: var(--accent-orange); font-size: 0.9rem; font-weight: 500; margin-bottom: 0.5rem; }
         .team-card p { color: var(--text-gray); font-size: 0.85rem; }
 
-        /* Advisory */
         .advisory-section {
             background: var(--primary-teal);
             padding: 5rem 2rem;
@@ -279,7 +161,6 @@
             font-size: 0.9rem;
         }
 
-        /* Timeline */
         .timeline {
             max-width: 700px;
             margin: 0 auto;
@@ -329,85 +210,12 @@
         .timeline-content h4 { font-size: 1.1rem; margin-bottom: 0.5rem; }
         .timeline-content p { color: var(--text-gray); font-size: 0.95rem; }
 
-        /* CTA */
-        .cta-section {
-            background: linear-gradient(135deg, var(--accent-orange) 0%, var(--accent-orange-light) 100%);
-            padding: 5rem 2rem;
-            text-align: center;
-            color: white;
-        }
-
-        .cta-section h2 { font-size: 2rem; font-weight: 700; margin-bottom: 1rem; }
-        .cta-section p { font-size: 1.1rem; opacity: 0.9; margin-bottom: 2rem; max-width: 600px; margin-left: auto; margin-right: auto; }
-
-        .btn-white {
-            background: white;
-            color: var(--accent-orange);
-            padding: 1rem 2rem;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: 600;
-            display: inline-block;
-            transition: all 0.2s;
-        }
-
-        .btn-white:hover { transform: translateY(-2px); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2); }
-
-        /* Footer */
-        .footer {
-            background: var(--text-dark);
-            color: white;
-            padding: 4rem 2rem 2rem;
-        }
-
-        .footer-inner { max-width: 1200px; margin: 0 auto; }
-
-        .footer-grid {
-            display: grid;
-            grid-template-columns: 2fr 1fr 1fr 1fr;
-            gap: 3rem;
-            margin-bottom: 3rem;
-        }
-
-        .footer-brand p { color: rgba(255, 255, 255, 0.7); margin-top: 1rem; font-size: 0.9rem; }
-
-        .footer-col h4 {
-            font-size: 0.9rem;
-            font-weight: 600;
-            margin-bottom: 1rem;
-            color: rgba(255, 255, 255, 0.5);
-            text-transform: uppercase;
-        }
-
-        .footer-col a {
-            display: block;
-            color: rgba(255, 255, 255, 0.8);
-            text-decoration: none;
-            font-size: 0.95rem;
-            margin-bottom: 0.75rem;
-            transition: color 0.2s;
-        }
-
-        .footer-col a:hover { color: white; }
-
-        .footer-bottom {
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            padding-top: 2rem;
-            display: flex;
-            justify-content: space-between;
-            font-size: 0.9rem;
-            color: rgba(255, 255, 255, 0.5);
-        }
-
-        .footer-logo { height: 50px; }
-
         @media (max-width: 768px) {
-            .nav { display: none; }
-            .page-hero h1 { font-size: 2rem; }
+
             .mission-grid { grid-template-columns: 1fr; }
             .values-grid { grid-template-columns: 1fr; }
             .team-grid { grid-template-columns: repeat(2, 1fr); }
-            .footer-grid { grid-template-columns: 1fr 1fr; }
+            
         }
     </style>
 </head>
