--- a/pages/rehberler/akdeniz-diyeti.html
+++ b/pages/rehberler/akdeniz-diyeti.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-QBM7E0EHFP');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akdeniz Diyeti Başlangıç Rehberi | UzunYaşa</title>
     <meta name="description" content="Dünyanın en sağlıklı beslenme tarzı Akdeniz diyeti: Ne yemeli, örnek menüler ve alışveriş listesi.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../../styles/main.css">
     <style>
-        :root { --primary: #195157; --primary-light: #2a6b73; --accent: #E8963E; --text: #1a1a1a; --text-light: #6b7280; --bg: #FAF9F7; --white: #FFFFFF; --border: #e5e7eb; --success: #10B981; }
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Inter', sans-serif; color: var(--text); line-height: 1.7; background: var(--bg); }
-        .header { position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background: rgba(255,255,255,0.97); backdrop-filter: blur(10px); border-bottom: 1px solid var(--border); }
-        .header-inner { max-width: 1200px; margin: 0 auto; padding: 0.75rem 2rem; display: flex; align-items: center; justify-content: space-between; }
-        .logo-img { height: 60px; }
-        .back-link { color: var(--primary); text-decoration: none; font-weight: 500; }
         .guide-hero { position: relative; padding: 8rem 2rem 4rem; color: white; overflow: hidden; }
         .guide-hero-bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
         .guide-hero-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, rgba(25,81,87,0.9), rgba(42,107,115,0.85)); }
@@ -46,7 +48,7 @@
         .guide-cta h3 { font-size: 1.5rem; margin-bottom: 0.5rem; }
         .guide-cta p { opacity: 0.9; margin-bottom: 1.5rem; }
         .cta-btn { display: inline-block; background: var(--accent); color: white; padding: 1rem 2rem; border-radius: 10px; text-decoration: none; font-weight: 600; }
-        footer { background: var(--text); color: white; padding: 2rem; text-align: center; margin-top: 4rem; }
+        
         footer p { opacity: 0.7; }
         @media (max-width: 768px) { .guide-hero h1 { font-size: 2rem; } }
     </style>
