--- a/pages/tesekkurler.html
+++ b/pages/tesekkurler.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-QBM7E0EHFP');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teşekkürler | UzunYaşa</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/main.css">
     <style>
-        :root { --primary: #195157; --accent: #E8963E; --text: #1a1a1a; --bg: #FAF9F7; }
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Inter', sans-serif; background: var(--bg); min-height: 100vh; display: flex; flex-direction: column; }
-        .header { background: white; padding: 1rem 2rem; border-bottom: 1px solid #e5e7eb; }
-        .header-inner { max-width: 1200px; margin: 0 auto; }
-        .logo-img { height: 50px; }
         .main { flex: 1; display: flex; align-items: center; justify-content: center; padding: 2rem; }
         .card { background: white; padding: 3rem; border-radius: 20px; text-align: center; max-width: 500px; box-shadow: 0 10px 40px rgba(0,0,0,0.08); }
         .icon { font-size: 4rem; margin-bottom: 1.5rem; }
@@ -19,7 +22,6 @@
         p { color: #6b7280; line-height: 1.7; margin-bottom: 1.5rem; }
         .btn { display: inline-block; background: var(--primary); color: white; padding: 1rem 2rem; border-radius: 10px; text-decoration: none; font-weight: 600; }
         .btn:hover { background: #0f3d42; }
-        footer { background: var(--text); color: white; padding: 1.5rem; text-align: center; font-size: 0.9rem; }
     </style>
 </head>
 <body>
