--- a/pages/test.html
+++ b/pages/test.html
@@ -1,47 +1,22 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QBM7E0EHFP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-QBM7E0EHFP');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecem - Sağlık Asistanınız | UzunYaşa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/main.css">
     <style>
-        :root {
-            --primary-teal: #195157;
-            --primary-teal-light: #2a6b73;
-            --accent-orange: #E8963E;
-            --accent-orange-light: #f0a854;
-            --text-dark: #1a1a1a;
-            --text-gray: #6b7280;
-            --bg-cream: #FAF9F7;
-            --bg-white: #FFFFFF;
-            --border-light: #e5e7eb;
-        }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            color: var(--text-dark);
-            line-height: 1.6;
-            background: var(--bg-cream);
-            min-height: 100vh;
-        }
-
-        /* Header */
-        .header {
-            background: var(--bg-white);
-            border-bottom: 1px solid var(--border-light);
-            padding: 1rem 2rem;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .logo-img { height: 50px; }
-
         .progress-container {
             flex: 1;
             max-width: 400px;
@@ -79,7 +54,6 @@
             gap: 0.5rem;
         }
 
-        /* Chat Container */
         .chat-container {
             max-width: 700px;
             margin: 0 auto;
@@ -95,7 +69,6 @@
             padding-bottom: 2rem;
         }
 
-        /* Messages */
         .message {
             display: flex;
             gap: 1rem;
@@ -176,7 +149,6 @@
             40% { transform: scale(1); }
         }
 
-        /* Options */
         .options-container {
             display: flex;
             flex-wrap: wrap;
@@ -213,7 +185,6 @@
             background: var(--primary-teal-light);
         }
 
-        /* Input Types */
         .input-container {
             margin-top: 1rem;
         }
@@ -288,7 +259,6 @@
             margin-bottom: 0.5rem;
         }
 
-        /* Continue Button */
         .continue-btn {
             width: 100%;
             padding: 1rem;
@@ -314,7 +284,6 @@
             cursor: not-allowed;
         }
 
-        /* Results Screen */
         .results-container {
             display: none;
             animation: fadeIn 0.5s ease;
@@ -386,7 +355,6 @@
         .risk-badge.moderate { background: #FEF3C7; color: #92400E; }
         .risk-badge.high { background: #FEE2E2; color: #991B1B; }
 
-        /* Summary Cards */
         .summary-section {
             margin-top: 2rem;
         }
@@ -432,7 +400,6 @@
         .status.warning { color: #D97706; }
         .status.alert { color: #DC2626; }
 
-        /* Recommendations */
         .recommendations {
             margin-top: 2rem;
         }
@@ -488,7 +455,6 @@
             align-self: center;
         }
 
-        /* Priority Tags */
         .priority-tag {
             font-size: 0.7rem;
             padding: 0.2rem 0.5rem;
@@ -500,7 +466,6 @@
         .priority-tag.high { background: #FEE2E2; color: #991B1B; }
         .priority-tag.medium { background: #FEF3C7; color: #92400E; }
 
-        /* Actions */
         .results-actions {
             display: flex;
             gap: 1rem;
