✨ Complete all remaining content pages
- Tedavi: +7 new pages (davranışsal-terapi, orlistat, naltrexone-bupropion, kombinasyon, yan-etkiler, ameliyat-hazırlık, uzun-vadeli-takip)
- Egzersiz: +2 remaining (grup-egzersizleri, rehabilitasyon)
- Beslenme: +3 with interactive JS calculators (BMI, kalori, bana-ne-uygun)
- Updated beslenme.html links
- Total: 26 new content pages across all sections

--- a/pages/beslenme.html
+++ b/pages/beslenme.html
@@ -281,9 +281,9 @@
                 </div>
                 <div class="footer-col">
                     <h4>Araçlar</h4>
-                    <a href="#">Bana Ne Uygun?</a>
-                    <a href="#">BMI Hesaplayıcı</a>
-                    <a href="#">Kalori Hesaplayıcı</a>
+                    <a href="beslenme/bana-ne-uygun.html">Bana Ne Uygun?</a>
+                    <a href="beslenme/bmi-hesaplayici.html">BMI Hesaplayıcı</a>
+                    <a href="beslenme/kalori-hesaplayici.html">Kalori Hesaplayıcı</a>
                 </div>
                 <div class="footer-col">
                     <h4>Hakkımızda</h4>
