--- a/pages/beslenme/bmi-hesaplayici.html
+++ b/pages/beslenme/bmi-hesaplayici.html
@@ -32,6 +32,7 @@
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/main.css">
+    <link rel="stylesheet" href="../../styles/content-page.css">
     <style>
         .guide-hero { position: relative; padding: 8rem 2rem 4rem; color: white; }
         .guide-hero-bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; }
@@ -405,5 +406,6 @@
             document.getElementById('bmi-result').scrollIntoView({ behavior: 'smooth', block: 'nearest' });
         }
     </script>
+    <script src="../../scripts/content-page.js" defer></script>
 </body>
 </html>
