--- a/pages/beslenme/kalori-hesaplayici.html
+++ b/pages/beslenme/kalori-hesaplayici.html
@@ -32,6 +32,7 @@
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/main.css">
+    <link rel="stylesheet" href="../../styles/content-page.css">
     <style>
         .guide-hero { position: relative; padding: 8rem 2rem 4rem; color: white; }
         .guide-hero-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, rgba(25,81,87,0.9), rgba(42,107,115,0.85)); }
@@ -474,5 +475,6 @@
             document.getElementById('cal-result').scrollIntoView({ behavior: 'smooth', block: 'nearest' });
         }
     </script>
+    <script src="../../scripts/content-page.js" defer></script>
 </body>
 </html>
