--- a/pages/stres/is-yasam-dengesi.html
+++ b/pages/stres/is-yasam-dengesi.html
@@ -21,6 +21,7 @@
     <meta property="og:image" content="https://images.unsplash.com/photo-1499750310107-5fef28a66643?w=1200">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/main.css">
+    <link rel="stylesheet" href="../../styles/content-page.css">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
