--- a/pages/stres/meditasyon-mindfulness.html
+++ b/pages/stres/meditasyon-mindfulness.html
@@ -21,6 +21,7 @@
     <meta property="og:image" content="https://images.unsplash.com/photo-1508672019048-805c876b67e2?w=1200">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/main.css">
+    <link rel="stylesheet" href="../../styles/content-page.css">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -335,5 +336,6 @@
             </div>
         </div>
     </footer>
+    <script src="../../scripts/content-page.js" defer></script>
 </body>
 </html>
