--- a/pages/tedavi/gastrik-sleeve.html
+++ b/pages/tedavi/gastrik-sleeve.html
@@ -15,6 +15,7 @@
     <meta name="description" content="Tüp mide ameliyatı nedir, nasıl yapılır, kimler için uygun? Avantajları, riskleri ve beklentiler hakkında detaylı bilgi.">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../styles/main.css">
+    <link rel="stylesheet" href="../../styles/content-page.css">
     <style>
         article { max-width: 800px; margin: 0 auto; padding: 7rem 2rem 4rem; }
         .breadcrumb { font-size: 0.9rem; color: var(--text-gray); margin-bottom: 1.5rem; }
@@ -145,5 +146,6 @@
     </article>
 
     <footer><p>© 2026 UzunYaşa. <a href="https://tyzd.org" target="_blank" style="color:inherit;text-decoration:underline;">Tıpta Yapay Zeka Derneği</a> girişimidir.</p></footer>
+    <script src="../../scripts/content-page.js" defer></script>
 </body>
 </html>
